--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: python
+
 python:
     - "2.5"
     - "2.6"
     - "2.7"
     - "3.2"
+
 install:
     - pip install --use-mirrors -e .
     - gem install sass
-    - gem install coffee-script
+    - npm install -g coffee-script
+
 script: nosetests
