--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
     - "3.7"
 
 install:
-    - pip install --use-mirrors -e .
+    - pip install -e .
     - gem install sass
     - npm install -g coffee-script
 
